# wordtree

./: Cargo.toml  DATA-LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: data.rs  generation.rs  index.rs  out_mac_m1.txt  out_rpi4.txt  path.rs  suggestions.rs
benches/data/: en.tsv.zst  sv.tsv.zst
comparisons/: Cargo.toml  REPORT.md
comparisons/benches/: lookup.rs  suggestions.rs
comparisons/src/: alloc_counter.rs  lib.rs
comparisons/tests/: correctness.rs
ego-tree/: Cargo.toml  README.md
ego-tree/src/: iter.rs  lib.rs
ego-tree/tests/: tree.rs
examples/: stats.rs
src/: expression.rs  lib.rs
src/builder/: build.rs  dft_post.rs  mod.rs  node_data.rs  node_ext.rs  tree_ext.rs
src/editdist/: README.md  dist4.rs  distinfo.rs  dlrow.rs  mod.rs
src/editdist/snapshots/: wordtree__editdist__dist4__cmp_oppen_dope.snap  wordtree__editdist__dist4__cmp_trab_tabi.snap  wordtree__editdist__dist4__delete_allas_end.snap  wordtree__editdist__dist4__delete_allas_mid.snap  wordtree__editdist__dist4__delete_allas_start.snap  wordtree__editdist__dist4__insert_alla_end.snap  wordtree__editdist__dist4__insert_alla_mid.snap  wordtree__editdist__dist4__insert_alla_start.snap  wordtree__editdist__dist4__substitute_alla_end.snap  wordtree__editdist__dist4__substitute_alla_mid.snap  wordtree__editdist__dist4__substitute_alla_start.snap  wordtree__editdist__dist4__switch_flyga_end.snap  wordtree__editdist__dist4__switch_flyga_mid.snap  wordtree__editdist__dist4__switch_flyga_start.snap
src/search/: distsearch.rs  freqsearch.rs  ledger.rs  maxarr.rs  mod.rs  suggestion.rs  term.rs
src/search/snapshots/: wordtree__search__distsearch__direct.snap  wordtree__search__freqsearch__basic.snap
src/search/tests/: complete.rs  corrections.rs  invariants.rs  mod.rs  oracle.rs  regression.rs  sv_a.tsv  walk.rs
src/search/tests/snapshots/: wordtree__search__tests__dl_walk_indel_trace.snap  wordtree__search__tests__pla.snap  wordtree__search__tests__sv_a.snap  wordtree__search__tests__sv_a_tree.snap  wordtree__search__tests__sv_alla.snap  wordtree__search__tests__sv_allman.snap  wordtree__search__tests__sv_allmanhet.snap  (+3 more)
src/trie/: data.rs  expr.rs  mod.rs  node.rs  noderef.rs  noderef_fn.rs  rank.rs  stringdelim.rs  tests.rs  tree.rs  tree_as.rs  tsv.rs
src/trie/snapshots/: wordtree__trie__tests__serialize.snap
