[package]
name = "wordtree"
version = "1.0.0"
authors = ["Henrik <henrik@akesson.mobi>"]
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "A compact, memory-mapped trie for browsable word indexes, fast word lookup, and frequency-aware spelling suggestions."
repository = "https://github.com/akesson/wordtree"
documentation = "https://docs.rs/wordtree"
readme = "README.md"
keywords = ["trie", "autocomplete", "spellcheck", "fuzzy", "prefix-tree"]
categories = ["data-structures", "algorithms", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
csv = "1.3"
derive_more = { version = "2.0", features = [
    "as_ref",
    "constructor",
    "deref",
    "deref_mut",
    "display",
    "into",
    "into_iterator",
] }
nonmax = "0.5"
rkyv = { version = "0.8", features = ["pointer_width_64"] }
serde = { version = "1.0", features = ["derive"] }
unicode-normalization = "0.1"

# vendored local dependency (see ./ego-tree, ISC licensed)
ego-tree = { path = "ego-tree" }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
insta = { version = "1.43", features = ["glob"] }
lazy_static = "1.5"
tempfile = "3.16"
zstd = "0.13"

[[bench]]
harness = false
name = "path"

[[bench]]
harness = false
name = "suggestions"

[[bench]]
harness = false
name = "index"

[[bench]]
harness = false
name = "generation"

[workspace]
members = ["ego-tree", "comparisons"]

[workspace.package]
edition = "2024"
